codama-macros/tests/codama_attribute/on_fields.fail.stderr
error: unrecognized type
 --> tests/codama_attribute/on_fields.fail.rs:5:21
  |
5 |     #[codama(type = invalid)]
  |                     ^^^^^^^

error: unrecognized type
  --> tests/codama_attribute/on_fields.fail.rs:12:38
   |
12 | pub struct TupleTest(#[codama(type = invalid)] u8);
   |                                      ^^^^^^^

error: unrecognized type
  --> tests/codama_attribute/on_fields.fail.rs:17:25
   |
17 |         #[codama(type = invalid)]
   |                         ^^^^^^^
